kubernetes/scripts/gateway.yaml
#command for create kubectl apply -f gateway.yaml -n site
#command for delete kubectl delete -f gateway.yaml -n site
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: drakecore-external-default-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - bi.drakecore.com
    - site.drakecore.com
    - da.drakecore.com
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: ssl-general-credential
    hosts:
    - bi.drakecore.com
    - site.drakecore.com
    - da.drakecore.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-nginx
spec:
  hosts:
    - bi.drakecore.com
    - site.drakecore.com
    - da.drakecore.com
  gateways:
  - drakecore-external-default-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 443
        host: nginx
